--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my website!</h1>
+        <h2>This is a second header</h2>
         Hello, world!
     </body>
 </html>
